# Omelet

./: Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: lib.rs  utils.rs  vec2.rs
src/matrices/: list_of_methods.txt  mat2.rs  mat2_tests.rs  mat3.rs  mat3_tests.rs  mat4.rs  mat4_tests.rs  mod.rs
src/quat/: list_of_methods.txt  mod.rs  quat.rs  quat_tests.rs
src/quaternion/: mod.rs  quat.rs  quat_tests.rs
src/vec/: list_of_methods.txt  mod.rs  vec2.rs  vec2_tests.rs  vec3.rs  vec3_tests.rs  vec4.rs  vec4_tests.rs
